Bug 688083 - Plugin Crash: Sync Submit Report Checkbox With Pref Between Instances. r=dolske